--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=demo
 spring.datasource.password=123456
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
